--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Rye&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rye&family=Tenor+Sans&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
+main {
+    max-width: 100%; 
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+}
+
 
 :root{
     --vertical-space: 2rem;
@@ -29,6 +40,12 @@ header h1, nav, nav a{
     color: var(--light-color) ;
 }
 
+h1 {
+    border-bottom: 2px solid #00943e; 
+    padding-bottom: 10px;
+    display: inline-block; 
+    margin-bottom: 10px; 
+}
 
 h1, h2, h3{
     line-height: 1.5;
@@ -55,6 +72,7 @@ body#about img {
 p{
     max-width: 50em;
 }
+
 body{
     display: grid;
     grid-template-areas: "head head"
@@ -73,6 +91,7 @@ body{
          grid-template-rows: auto 1fr auto;
     }
 }
+
 body > * {
     padding-left: var(--horizontal-space);
     padding-right: var(--horizontal-space);
